# lwcl

./: CMakeLists.txt
include/: color.hpp  log.hpp  log_level.hpp  logger.hpp  logger_options.hpp  modifiers.hpp  source_location.hpp  style.hpp
src/: ansi_seq.hpp  log.inl  logger_options.inl  modifiers.inl  source_location.inl
